# advent-of-code

./: README.md  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
src/advent_of_code/d1/: Day 1 solution.md  __init__.py  d1.py
src/advent_of_code/d11/: d11.ipynb
src/advent_of_code/d12/: Day 12 solution.md  d12.ipynb
src/advent_of_code/d13/: Day 13 solution.md  d13.ipynb
src/advent_of_code/d2/: Day 2 solution.md  __init__.py  d2.py
src/advent_of_code/d3/: Day 3 solution.md  __init__.py  d3.py
src/advent_of_code/d4/: Day 4 solution.md  d4.py  test.py
src/advent_of_code/d5/: __init__.py  d5.py
src/advent_of_code/d6/: d6.ipynb  d6.py
src/advent_of_code/d7/: Day 7 solution.md  __init__.py  d7.py
src/advent_of_code/d9/: d9.ipynb
tests/: d1_test.py  d2_test.py  d3_test.py  d5_test.py  d7_test.py
