[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "sharing my attempts at advent of code 2023 on a ad-hoc basis"
authors = ["Vincent <vinymwong@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
networkx = "^3.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
jupyterlab = "^4.0.9"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = "src"
testpaths = [
    "tests"
]
log_level = "DEBUG"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
